Removed anchor tags from titles

--- a/my-dream-app/src/app/Teacher/createteacher/createteacher.component.html
+++ b/my-dream-app/src/app/Teacher/createteacher/createteacher.component.html
@@ -1,13 +1,13 @@
 <div class="row card-style-main">
   <h4 class="main-title">Create Teacher</h4>
+  
+  <!-- Personal Information Component -->
   <div class="odd-card">
     <div class="panel-group mb-0">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h4 class="panel-title">
-            <a href="#">
               Personal Information
-            </a>
           </h4>
         </div>
 
@@ -94,14 +94,14 @@
       </div>
     </div>
   </div>
+
+  <!-- Address Information Component -->
   <div class="odd-card">
     <div class="panel-group mb-0">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h4 class="panel-title">
-            <a href="#">
               Address Information
-            </a>
           </h4>
         </div>
 
