Change and Forget Password component

--- a/my-dream-app/src/app/Account/changepassword/changepassword.component.html
+++ b/my-dream-app/src/app/Account/changepassword/changepassword.component.html
@@ -1,3 +1,46 @@
-<p>
-  changepassword works!
-</p>
+<!-- Change Password Component -->
+<div class="odd-card">
+  <div class="panel-group mb-0">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          Change Password
+        </h4>
+      </div>
+
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-lg-3 col-md-3 col-sm-3">
+            <div class="form-group mb-0">
+              <label for="AccountName" class="form-label">Old Password
+                <sup>*</sup>
+              </label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Old Password">
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3">
+            <div class="form-group mb-0">
+              <label for="AccountName" class="form-label">New Password
+                <sup>*</sup>
+              </label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="New Password">
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3">
+            <div class="form-group mb-0">
+              <label for="AccountName">Re-enter Password
+                <sup>*</sup>
+              </label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Re-enter Password">
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3">
+            <div class="btn-wrap pb-0 mt-24">
+              <button class="btn btn-primary"><i class="fa fa-search"></i>Change Password</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
