--- a/my-dream-app/src/app/Account/forgetpassword/forgetpassword.component.html
+++ b/my-dream-app/src/app/Account/forgetpassword/forgetpassword.component.html
@@ -1,3 +1,29 @@
-<p>
-  forgetpassword works!
-</p>
+<div class="odd-card">
+  <div class="panel-group mb-0">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+            Forget Password
+        </h4>
+      </div>
+
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-lg-4 col-md-4 col-sm-4">
+            <div class="form-group mb-0">
+              <label for="AccountName">Email
+                <sup>*</sup>
+              </label>
+              <input type="text" placeholder="User Name" id="AccountName" class="form-control form-field" />
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4">
+            <div class="btn-wrap pb-0 mt-24">
+              <button class="btn btn-primary"><i class="fa fa-search"></i>Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
