--- a/my-dream-app/src/app/Account/login/login.component.html
+++ b/my-dream-app/src/app/Account/login/login.component.html
@@ -39,81 +39,9 @@
   </div>
 
   <!-- Forget Password Component -->
-  <div class="odd-card">
-    <div class="panel-group mb-0">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title">
-              Forget Password
-          </h4>
-        </div>
-
-        <div class="panel-body">
-          <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-4">
-              <div class="form-group mb-0">
-                <label for="AccountName">Email
-                  <sup>*</sup>
-                </label>
-                <input type="text" placeholder="User Name" id="AccountName" class="form-control form-field" />
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4">
-              <div class="btn-wrap pb-0 mt-24">
-                <button class="btn btn-primary"><i class="fa fa-search"></i>Send</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-forgetpassword></app-forgetpassword>
 
    <!-- Change Password Component -->
-   <div class="odd-card">
-    <div class="panel-group mb-0">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title">
-              Change Password
-          </h4>
-        </div>
-
-        <div class="panel-body">
-          <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-3">
-              <div class="form-group mb-0">
-                <label for="AccountName" class="form-label">Old Password
-                  <sup>*</sup>
-                </label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Old Password">
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3">
-              <div class="form-group mb-0">
-                <label for="AccountName" class="form-label">New Password
-                  <sup>*</sup>
-                </label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="New Password">
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3">
-              <div class="form-group mb-0">
-                <label for="AccountName">Re-enter Password
-                  <sup>*</sup>
-                </label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Re-enter Password">
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3">
-              <div class="btn-wrap pb-0 mt-24">
-                <button class="btn btn-primary"><i class="fa fa-search"></i>Change Password</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+   <app-changepassword></app-changepassword>
 
 </div>
